--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,6 @@
 
+<!-- VERY VERY BASIC FUNCTIONALITY. ALLOWS MOBILE HAND-DRAWING. CURRENTLY LINKING UP DICTIONARY WITH USER INPUT.  -->
+
 <!doctype html>
 <html lang="en">
     <head>
