--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 
             <!-- N.B. This is for a popup overlay! -->
             <div id="overlay" onclick="turnOverlayOff();">
-                <div id="overlayText"></div>
+                <!-- <div class="over"> -->
+                    <div id="overlayText"></div>
+                <!-- </div> -->
             </div>
 
             <span style="display : inline-block">
@@ -26,17 +28,18 @@
                         </div>
 
                     <div class=outputboxes id = outputboxes> 
-                        <button class="kanjiList" onclick="kanjiInfo(this.innerHTML)">連</button>
-                        <button class="kanjiList" onclick="kanjiInfo(this.innerHTML)">想</button>
-                        <button class="kanjiList" onclick="kanjiInfo(this.innerHTML)">漢</button>
-                        <button class="kanjiList" onclick="kanjiInfo(this.innerHTML)">字</button>
-                        <button class="kanjiList" onclick="kanjiInfo(this.innerHTML)">蝶</button>
-                        <button class="kanjiList" onclick="kanjiInfo(this.innerHTML)">番</button>
+                        <button class="kanjiList" onclick="kanjiInfo(this.innerHTML, 'browser')">想</button>
+                        <button class="kanjiList" onclick="kanjiInfo(this.innerHTML, 'browser')">連</button>
+                        <button class="kanjiList" onclick="kanjiInfo(this.innerHTML, 'browser')">漢</button>
+                        <button class="kanjiList" onclick="kanjiInfo(this.innerHTML, 'browser')">字</button>
+                        <button class="kanjiList" onclick="kanjiInfo(this.innerHTML, 'browser')">蝶</button>
+                        <button class="kanjiList" onclick="kanjiInfo(this.innerHTML, 'browser')">番</button>
                     </div>
 
                     <div class="actionButtons">
                         <button class="actionButton" id="outputButton" onclick="output();">〒</button>
-                        <button class="actionButton" id="helpButton" onclick="help();">？</button>
+                        <button class="actionButton" style="text-align:center;" id="helpButton" onclick="help();">？ </button>
+                        <!-- TODO: text-align needed here?  -->
                      </div>
 
                 </div>
@@ -45,7 +48,7 @@
 
                     <!-- TODO: fix up NK -->
                     <button class="NKactionButton" id="commaButton" onclick="submitKanji(this.innerHTML, this.id);">、</button>
-                    <button class="newestKanji" id="nk" onclick="kanjiInfo(this.innerHTML)">　</button>
+                    <button class="newestKanji" id="nk" onclick="kanjiInfo(this.innerHTML, 'browser')">　</button>
                     <button class="NKactionButton" id="stopButton"  onclick="submitKanji(this.innerHTML, this.id);">。</button>
 
                 </div>  
@@ -54,11 +57,11 @@
 
                 <div class="resultsboxes">
                    
+                    <button class="resultbox startup" id="rb0" onclick="submitKanji(this.innerHTML, this.id)">漢</button>              
                     <button class="resultbox startup" id="rb1" onclick="submitKanji(this.innerHTML, this.id)">字</button>             
                     <button class="resultbox startup" id="rb2" onclick="submitKanji(this.innerHTML, this.id)">を</button>        
                     <button class="resultbox startup" id="rb3" onclick="submitKanji(this.innerHTML, this.id)">書</button>        
                     <button class="resultbox startup" id="rb4" onclick="submitKanji(this.innerHTML, this.id)">い</button>         
-                    <button class="resultbox startup" id="rb0" onclick="submitKanji(this.innerHTML, this.id)">漢</button>              
                     <button class="resultbox startup" id="rb5" onclick="submitKanji(this.innerHTML, this.id)">て</button>
                 
                 </div>
@@ -101,14 +104,20 @@
                     if (err) {                           
                         throw err;
                     }
-                    else {   
-                        for (i=0;i<6;i++) {
+                    else {
+                        // Z-logic to be commented out if significant difference between mobile handwriting and mousepad input doesn't persist.
+                        // TODO: research JS for loop logic + limited control vs C.
+                        let z = 5;   
+                        for (i=0;i<6;i++) 
+                        {
                             if (data[i] == null ) {
                                 continue;
                             }
                             else {
-                                document.getElementById("rb" + i).innerHTML = data[i];
+                                // document.getElementById("rb" + i).innerHTML = data[i];
+                                document.getElementById("rb" + z).innerHTML = data[i];
                             }
+                            z = z - 1;
                         }
                     }       
                 });
