guess buttons; tweaks

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
                     <div class="actionButtons">
                         <button class="actionButton" id="outputButton" onclick="output();">〒</button>
-                        <button class="actionButton" style="text-align:center;" id="helpButton" onclick="help();">？ </button>
+                        <button class="actionButton" style="text-align:center;" id="helpButton" onclick="help();">何</button>
                         <!-- TODO: text-align needed here?  -->
                      </div>
 
