About screen tweaks

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
             <!-- TOP RIGHT BUTTONS -->
                 <div class="actionButtons">
-                    <button class="actionButton" id="outputButton" onclick="outputList('send');">〒</button>
+                    <!-- <button class="actionButton" id="outputButton" onclick="outputList('send');">〒</button> -->
                     <button class="actionButton" id="copyButton" onclick="outputList('copy');">写</button>
                     <button class="actionButton" style="text-align:center;" id="helpButton" onclick="help();">何</button>
                 </div>
